[gd_scene load_steps=3 format=3 uid="uid://chvqlsbp0m0km"]

[ext_resource type="Script" uid="uid://d3gpea1lft422" path="res://MainMenu.gd" id="1_eiy7p"]
[ext_resource type="Texture2D" uid="uid://c4ifusj1tgphd" path="res://addons/cheddaboards/icon.png" id="2_eiy7p"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eiy7p")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -182.0
offset_top = -624.0
offset_right = 445.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_eiy7p")
expand_mode = 1

[node name="LoginPanel" type="Panel" parent="."]
layout_mode = 1
offset_left = 262.0
offset_top = 513.0
offset_right = 262.0
offset_bottom = 513.0

[node name="MarginContainer" type="MarginContainer" parent="LoginPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LoginPanel/MarginContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="LoginPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Welcome!"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="LoginPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Login to save your progress"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="LoginPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CheddaButton" type="Button" parent="LoginPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Login with Chedda"

[node name="GoogleButton" type="Button" parent="LoginPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Login with Google"

[node name="AppleButton" type="Button" parent="LoginPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Login with Apple"

[node name="StatusLabel" type="Label" parent="LoginPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -680.0
offset_top = -395.0
offset_right = -680.0
offset_bottom = -395.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 691.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer"]
layout_mode = 2

[node name="WelcomeLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Welcome, Player!"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsPanel" type="PanelContainer" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/StatsPanel"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/StatsPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "High Score: 0"
horizontal_alignment = 1

[node name="StreakLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/StatsPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Best Streak: 0"
horizontal_alignment = 1

[node name="PlaysLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/StatsPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play Count: 0"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "PLAY"

[node name="ChangeNicknameButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Change Nickname"

[node name="LeaderboardButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Leaderboard"

[node name="AchievementsButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Achievements"

[node name="SettingsButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Settings"

[node name="LogoutButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Logout"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
position_smoothing_enabled = true
